[package]
name = "beacon"
version = "0.1.0"
authors = ["Ralfs Garkaklis <ralfs@garkaklis.com>"]
edition = "2018"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "beacon"
crate-type = ["dylib"]

[dependencies]
arma-rs = { git = "https://github.com/synixebrett/arma-rs", branch = "master" }
libc = "*"
dotenv = "0.15.0"
reqwest = { version = "0.10.2", features = ["json", "blocking"] }