[package]
name = "beacon"
version = "0.1.0"
authors = ["Ralfs Garkaklis <ralfs@garkaklis.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "beacon"
crate-type = ["dylib"]

[dependencies]
arma-rs = { git = "https://github.com/synixebrett/arma-rs", branch = "master" }
arma-rs-macros = { git = "https://github.com/synixebrett/arma-rs", branch = "master" }
libc = "*"
tungstenite = "0.10.1"
openssl = { version = "0.10.28", features = ["vendored"] }
