[package]
name = "beacon"
version = "0.1.0"
authors = ["Ralfs Garkaklis <ralfs@garkaklis.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "beacon"
crate-type = ["dylib"]

[dependencies]
arma-rs = { git = "https://github.com/synixebrett/arma-rs", branch = "master" }
arma-rs-macros = { git = "https://github.com/synixebrett/arma-rs", branch = "master" }
chrono = "0.4.11"
dotenv = "0.15.0"
dotenv_codegen = "0.15.0"
lazy_static = "1.4.0"
libc = "*"
tungstenite = "0.10.1"
serde_json = "1.0"
